Removed the ability for the plugin to package plugin as a jar. This release of FDevTools is for maven based projects.